infra/configs/base/kiali/ingress-route.yaml
# TODO: There should be a cluster specified route, but not now.
# ---
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: kiali
#   namespace: kiali-operator
# spec:
#   parentRefs:
#     - name: infra-gateway
#       namespace: kube-system
#   hostnames: ["kial319.ccsn.dev"]
#   rules:
#     - matches:
#         - path:
#             type: PathPrefix
#             value: /kiali
#       backendRefs:
#         - name: kiali
#           port: 20001
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kiali
  namespace: kiali-operator
spec:
  parentRefs:
    - name: default-gateway
      namespace: prod
  hostnames: ["kial319.ccsn.dev"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kiali
          port: 20001
